1998-07-29  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.c (gnome_canvas_line_set_arg): When re-setting
	the coordinates of the line, drop the arrowhead polygons if they
	exist, as they need to be regenerated.

	* gnome-canvas-line.c (reconfigure_arrows): Do not do anything if
	the line does not have any points at all.
	(recalc_bounds): Only grow the bounds to include the arrows if the
	arrows have been defined yet.

	* gnome-canvas-line.c (reconfigure_arrows): Do not scale the
	arrows when the width of the line is specified in (unchanging)
	pixels, to be consistent with the rest of the canvas.
	(gnome_canvas_line_point): Adjust the effective width of the line
	for the distance-to-point calculation so that even lines that are
	logically less than one pixel thick can be picked up.

1998-07-29  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-list.h, gnome-icon-list.c: Put const on char* args.

1998-07-28  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.c (gnome_canvas_line_draw): Draw the
	arrowheads if they exist.
	(reconfigure_arrows): New function used to recompute the arrowhead
	polygons.

	* gnome-canvas-line.c (recalc_bounds): Doh.  Call
	gnome_canvas_group_child_bounds() to notify the line's parent of
	the changed bounds.

	Added standard Gtk functions for querying object arguments:

	* gnome-canvas.c (gnome_canvas_group_get_arg): New function.
	* gnome-canvas-rect-ellipse.c (gnome_canvas_re_get_arg): New function.
	* gnome-canvas-text.c (gnome_canvas_text_get_arg): New function.
	* gnome-canvas-line.c (gnome_canvas_line_get_arg): New function.

	* gnome-canvas.c (gnome_canvas_request_redraw): Do not do anything
	if the widget is not drawable.

1998-07-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.c (gnome_canvas_line_destroy): Doh, forgot to
	assign line.

	* gnome-canvas.c (item_post_create_setup): Moved
	realization/mapping from here to group_add().