@@ -1,3 +1,8 @@
+1998-07-29  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* Makefile.am (EXTRA_DIST): Add `gnome.defs', make{types,enums}
+	scripts, and gnometypebuiltins_{vars,ids,evals}.c.
+
 1998-07-29  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* gnome-canvas-line.c (gnome_canvas_line_set_arg): When re-setting
